Domain Modul begonnen

--- a/src/texts/messages_de.properties
+++ b/src/texts/messages_de.properties
@@ -1,1 +1,6 @@
-hello=Hallo
+edit=bearbeiten
+delete=loeschen
+hello.label=Hallo
+domain.label=Domains
+domain.name.label=Domain
+domain.user.label=Verwalter
