--- a/src/texts/domain_de.properties
+++ b/src/texts/domain_de.properties
@@ -4,5 +4,5 @@ user=Administrator
 pac=Paket
 hive=Server
 since=aufgeschaltet seit
-title=Domains
-icon=../runo/icons/16/document-web.png
+moduletitle=Domains
+moduleicon=../runo/icons/16/document-web.png
