--- a/src/texts/emailaddress_de.properties
+++ b/src/texts/emailaddress_de.properties
@@ -7,5 +7,5 @@ target=Ziel(e)
 admin=Administrator
 pac=Paket
 fulldomain=volle Domain
-title=EMail Adressen
-icon=../runo/icons/16/email.png
+moduletitle=EMail Adressen
+moduleicon=../runo/icons/16/email.png
