--- a/src/texts/emailalias_de.properties
+++ b/src/texts/emailalias_de.properties
@@ -2,5 +2,5 @@ id=Schlüssel
 name=Alias
 target=Ziel(e)
 pac=Paket
-title=EMail Aliases
-icon=../runo/icons/16/email-send.png
+moduletitle=EMail Aliases
+moduleicon=../runo/icons/16/email-send.png
