generisches Formular fuer Update und Add begonnen

--- a/src/texts/main_de.properties
+++ b/src/texts/main_de.properties
@@ -1,4 +1,6 @@
 applicationtitle=HSAdmin Web Application
+update=bearbeiten
 delete=löschen
-confirmdelete=Diese Zeile löschen?
+confirmdelete=Diesen Eintrag löschen?
+save=speichern
 abort=abbrechen
