--- a/src/texts/user_de.properties
+++ b/src/texts/user_de.properties
@@ -1,11 +1,12 @@
 id=Schlüssel
 name=Benutzername
-comment=Beschreibung
-shell=Unix Shell
-userid=Numerische Id
+comment=Kommentar
+shell=Shell
+userid=Benutzerkennung
 homedir=Heimat Verzeichnis
 pac=Paket
-quota_softlimit=Weiche Quota
-quota_hardlimit=Harte Quota
-moduletitle=Unix Benutzer
+quota_softlimit=Soft-Quota [MB]
+quota_hardlimit=Hard-Quota [MB]
+moduletitle=Unix User
 moduleicon=../runo/icons/16/users.png
+new=Benutzer anlegen
