Felder fuer: Passwort, Auswahl, Read-Only etc. Update der Vaadin-Lib auf 6.5.3

--- a/src/texts/main_de.properties
+++ b/src/texts/main_de.properties
@@ -4,3 +4,6 @@ delete=löschen
 confirmdelete=Diesen Eintrag löschen?
 save=speichern
 abort=abbrechen
+new=Eintrag anlegen
+impressum.label=Impressum
+impressum.link=http://www.hostsharing.net/impressum
