--- a/src/texts/user_de.properties
+++ b/src/texts/user_de.properties
@@ -1,5 +1,7 @@
 id=Schlüssel
 name=Benutzername
+password1=Passwort
+password2=Passwort (Wdhlg.)
 comment=Kommentar
 shell=Shell
 userid=Benutzerkennung
@@ -10,3 +12,4 @@ quota_hardlimit=Hard-Quota [MB]
 moduletitle=Unix User
 moduleicon=../runo/icons/16/users.png
 new=Benutzer anlegen
+update=Benutzer ändern
