--- a/src/texts/domain_de.properties
+++ b/src/texts/domain_de.properties
@@ -7,3 +7,4 @@ since=aufgeschaltet seit
 moduletitle=Domains
 moduleicon=../runo/icons/16/document-web.png
 new=Domain konfigurieren
+update=Domaindaten ändern
