--- a/src/texts/emailaddress_de.properties
+++ b/src/texts/emailaddress_de.properties
@@ -10,3 +10,4 @@ fulldomain=volle Domain
 moduletitle=EMail Adressen
 moduleicon=../runo/icons/16/email.png
 new=EMail-Adresse anlegen
+update=EMail-Adresse ändern
