--- a/src/texts/user_de.properties
+++ b/src/texts/user_de.properties
@@ -1,7 +1,8 @@
 id=Schlüssel
 name=Benutzername
-password1=Passwort
-password2=Passwort (Wdhlg.)
+password=Passwort
+password1=neues Passwort
+password2=Passwort-Wiederholung
 comment=Kommentar
 shell=Shell
 userid=Benutzerkennung
