Rollen-spezifische Module

--- a/src/texts/main_de.properties
+++ b/src/texts/main_de.properties
@@ -6,4 +6,5 @@ save=speichern
 abort=abbrechen
 new=Eintrag anlegen
 impressum.label=Impressum
-impressum.link=http://www.hostsharing.net/impressum
+impressum.link=https://www.hostsharing.net/impressum
+logo.link=https://www.hostsharing.net/logo.png
