--- a/src/texts/pac_de.properties
+++ b/src/texts/pac_de.properties
@@ -1,7 +1,7 @@
 id=Schlüssel
 name=Paket
 curinetaddr=IP Adresse
-created=angelegt
+created=angelegt am
 basepac=Pakettyp
 components=Paket-Optionen
 hive=Server
