show objct name in delete confirm dialog

--- a/src/texts/domain_de.properties
+++ b/src/texts/domain_de.properties
@@ -7,4 +7,5 @@ since=aufgeschaltet seit
 moduletitle=Domains
 moduleicon=../runo/icons/16/document-web.png
 new=Domain konfigurieren
-update=Domaindaten ändern
+update=Domainkonfiguration ändern
+delete=Domainkonfiguration löschen
