--- a/src/texts/emailaddress_de.properties
+++ b/src/texts/emailaddress_de.properties
@@ -11,3 +11,4 @@ moduletitle=EMail Adressen
 moduleicon=../runo/icons/16/email.png
 new=EMail-Adresse anlegen
 update=EMail-Adresse ändern
+delete=EMail-Adresse löschen
