--- a/src/texts/emailalias_de.properties
+++ b/src/texts/emailalias_de.properties
@@ -6,3 +6,4 @@ moduletitle=EMail Aliases
 moduleicon=../runo/icons/16/email-send.png
 new=EMail-Alias anlegen
 update=EMail-Alias ändern
+delete=EMail-Alias löschen
