--- a/src/texts/mysqldb_de.properties
+++ b/src/texts/mysqldb_de.properties
@@ -5,5 +5,6 @@ encoding=Zeichensatz
 owner=Verwalter
 moduletitle=MySQL DB
 new=Datenbank anlegen
-update=Datenbank ändern
+update=Datenbank
+delete=Datenbank löschen
 moduleicon=../hs/icons/table.png
