--- a/src/texts/mysqluser_de.properties
+++ b/src/texts/mysqluser_de.properties
@@ -7,4 +7,5 @@ pac=Paket
 moduletitle=MySQL User
 new=User anlegen
 update=Passwort ändern
+delete=User löschen
 moduleicon=../hs/icons/table_key.png
