--- a/src/texts/postgresqldb_de.properties
+++ b/src/texts/postgresqldb_de.properties
@@ -6,4 +6,5 @@ owner=Verwalter
 moduletitle=PostgreSQL DB
 new=Datenbank anlegen
 update=Datenbank
+delete=Datenbank löschen
 moduleicon=../hs/icons/database.png
