--- a/src/texts/postgresqluser_de.properties
+++ b/src/texts/postgresqluser_de.properties
@@ -7,4 +7,5 @@ pac=Paket
 moduletitle=PostgreSQL User
 new=User anlegen
 update=Passwort ändern
+delete=User löschen
 moduleicon=../hs/icons/database_key.png
