--- a/src/texts/user_de.properties
+++ b/src/texts/user_de.properties
@@ -14,3 +14,4 @@ moduletitle=Unix User
 moduleicon=../runo/icons/16/users.png
 new=Benutzer anlegen
 update=Benutzer ändern
+delete=Benutzer löschen
