refactorings on run-as feature

--- a/src/texts/main_de.properties
+++ b/src/texts/main_de.properties
@@ -5,4 +5,4 @@ confirmdelete=Diesen Eintrag löschen?
 save=speichern
 abort=abbrechen
 new=Eintrag anlegen
-runas=als Benutzer
+runas=<strong>Auswahl/Eingabe:</strong><br />zur Ansicht eines anderen<br />Benutzers wechseln
