new logout button

--- a/src/texts/main_de.properties
+++ b/src/texts/main_de.properties
@@ -6,3 +6,4 @@ save=speichern
 abort=abbrechen
 new=Eintrag anlegen
 runas=<strong>Auswahl/Eingabe:</strong><br />zur Ansicht eines anderen<br />Benutzers wechseln
+logout=abmelden
