new edit widget pacprefixed-name

--- a/src/texts/user_de.properties
+++ b/src/texts/user_de.properties
@@ -1,5 +1,8 @@
 id=Schlüssel
-name=Benutzername
+name=Benutzer
+name.pacprefix=Paket
+name.separator=-
+name.postfix=Benutzer-Postfix
 password=Passwort
 password1=neues Passwort
 password2=Passwort-Wiederholung
