new editor widget for alias name

--- a/src/texts/emailalias_de.properties
+++ b/src/texts/emailalias_de.properties
@@ -1,5 +1,8 @@
 id=Schlüssel
 name=Alias
+name.pacprefix=Paket
+name.separator=-
+name.postfix=Alias-Postfix
 target=Ziel(e)
 pac=Paket
 moduletitle=EMail Aliases
