Domain-options shown and editable in web interface. Minor corrections elsewhere.

--- a/src/texts/domain_de.properties
+++ b/src/texts/domain_de.properties
@@ -1,6 +1,16 @@
 id=Schlüssel
 name=Domain
 user=Administrator
+domainoptions=Optionen
+domainoption.backupmxforexternalmx=BackUpMxForExternalMx
+domainoption.greylisting=GreyListing
+domainoption.htdocsfallback=HtDocsFallback
+domainoption.includes=Includes
+domainoption.indexes=Indexes
+domainoption.multiviews=MultiViews
+domainoption.php=PHP
+yes=Ja
+no=Nein
 pac=Paket
 hive=Server
 since=aufgeschaltet seit
