Multi language based on the browser's language

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,4 +1,4 @@
-user=user
+user=User
 domain=Domain
 emailaddress=Email Address
 pac=Package
@@ -11,12 +11,15 @@ name=Name
 basepac=Base package
 hive=Hive
 unixUser=Unix User
-curlNetAddr=Network Address??
+curINetAddr=Network Address
 user.name=Username
 user.pac=Package
 user.comment=Comment
 user.shell=Shell
 user.homedir=Home
+user.locked=Locked
+user.quotaSoftlimit=Quota soft limit
+user.quotaHardlimit=Quota hard limit
 emailalias.name=Email alias name
 emailalias.pac=Package
 emailalias.target=Target
@@ -53,9 +56,29 @@ Edit=Edit
 Delete=Delete
 Refresh=Refresh
 Help=Help
+new=New
+edit=Edit
+delete=Delete
+refresh=Refresh
+Help=Help
 customer=Customer
 contact=Contact
 cancel=Cancel
 mandat=Mandat
 password=Password
 login=Sign in
+comment=Comment
+shell=Shell
+quotaSoftlimit=Quota soft limit
+quotaHardlimit=Quota hard limit
+target=Target
+owner=Owner
+encoding=Encoding
+localpart=Local part
+subdomain=Subdomain
+domain=Domain
+target=Target
+homedir=Home
+locked=Locked
+instance=Instance
+emptySelectionMessage=Please select a record to
