--- a/src/main/resources/Messages_es.properties
+++ b/src/main/resources/Messages_es.properties
@@ -1,4 +1,4 @@
-user=usuario
+user=Usuario
 domain=Dominio
 emailaddress=Dirección de correo 
 pac=Paquete
@@ -9,14 +9,17 @@ postgresqluser=Usuario Postgresql
 postgresqldb=Base de datos Postgresql
 name=Nombre
 basepac=Paquete base
-hive=Hive ???
+hive=Hive
 unixUser=Usuario Unix
-curlNetAddr=Dirección de red??
+curINetAddr=Dirección de red
 user.name=Nombre de usuario
 user.pac=Paquete
 user.comment=Comentario
 user.shell=Shell
 user.homedir=Inicio
+user.locked=Bloqueado
+user.quotaSoftlimit=Quota soft limit
+user.quotaHardlimit=Quota hard limit
 emailalias.name=Nombre de alias
 emailalias.pac=Paquete
 emailalias.target=Destino
@@ -53,9 +56,29 @@ Edit=Editar
 Delete=Eliminar
 Refresh=Refrescar
 Help=Ayuda
+new=Nuevo
+edit=Editar
+delete=Eliminar
+refresh=Refrescar
+help=Ayuda
 customer=Cliente
 contact=Contacto
 cancel=Cancelar
 mandat=Mandato electrónico
 password=Contraseña
 login=Iniciar sesión
+comment=Comentario
+shell=Shell
+quotaSoftlimit=Quota soft limit
+quotaHardlimit=Quota hard limit
+target=Destino
+owner=Propietario
+encoding=Codificación
+localpart=Parte local
+subdomain=Sub-dominio
+domain=Dominio
+target=Destino
+homedir=Inicio
+locked=Bloqueado
+instance=Instancia
+emptySelectionMessage=Por favor seleccione un registro para
