add german translation, refactoring

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -1,2 +1,84 @@
 main.panel.title=Willkommen
 main.panel.text=in der Hostsharing Administration
+user=Anmelde-Name
+domain=Domain
+emailaddress=EMail-Adresse
+pac=Web-Paket
+emailalias=EMail-Alias
+mysqluser=MySql User
+mysqldb=MySql Datenbank
+postgresqluser=Postgresql User
+postgresqldb=Postgresql Datenbank
+name=Name
+basepac=Paket-Typ
+hive=Server
+unixUser=Anmelde-Kennung
+curINetAddr=Netzwerk-Adresse (IPv4)
+user.name=Anmelde-Name
+user.pac=Web-Paket
+user.comment=Kurzbeschreibung
+user.shell=Shell/Kommando-Interpreter
+user.homedir=Heimat-Verzeichnis
+user.locked=Gesperrt
+user.quotaSoftlimit=Quota (Soft-Limit)
+user.quotaHardlimit=Quota (Hard-Limit)
+emailalias.name=EMail-Alias
+emailalias.pac=Web-Paket
+emailalias.target=Postfach/Weiterleitung
+domain.name=Domain-Name
+domain.user=Domain-Administrator
+domain.since=eingerichtet am
+domain.dnsMaster=DNS Server
+domain.domainoptions=Domain-Optionen
+mysqluser.name=MySql User
+mysqluser.instance=Datenbank-System
+mysqluser.pac=Web-Paket
+mysqldb.name=MySql Datenbank
+mysqldb.instance=Datenbank-System
+mysqldb.owner=MySql User
+mysqldb.pac=Web-Paket
+mysqldb.encoding=Zeichen-Kodierung
+postgresqluser.name=PostgreSQL User
+postgresqluser.instance=Datenbank-System
+postgresqluser.pac=Web-Paket
+postgresqldb.name=PostgreQL Datenbank
+postgresqldb.instance=Datenbank-System
+postgresqldb.owner=Postgres User
+postgresqldb.pac=Web-Paket
+postgresqldb.encoding=Zeichen-Kodierung
+since=eingerichtet am
+dnsMaster=DNS Server
+domainoptions=Domain-Optionen
+emailaddress.localpart=lokaler Teil
+emailaddress.subdomain=Subdomain
+emailaddress.domain=Domain
+emailaddress.target=Postfach/Weiterleitung
+new.tooltip=Neuen Eintrag anlegen
+edit.tooltip=Ausgewählten Eintrag bearbeiten
+delete.tooltip=Ausgewählten Eintrag löschen
+refresh.tooltip=Tabelle neu laden
+help.tooltip=Hilfetext anzeigen
+new=neu
+edit=ändern
+delete=löschen
+refresh=neu laden
+customer=Kunde/Mitglied
+contact=Ansprechpartner
+cancel=abbrechen
+ok=Ok
+mandat=SEPA-Mandat
+password=Passwort
+login=Anmelde-Name
+comment=Kurzbeschreibung
+shell=Shell/Kommando-Interpreter
+quotaSoftlimit=Quota (Soft-Limit)
+quotaHardlimit=Quota (Hard-Limit)
+target=Postfach/Weiterleitung
+owner=Domain-Administrator
+encoding=Zeichen-Kodierung
+localpart=lokaler Teil
+subdomain=Subdomain
+homedir=Heimat-Verzeichnis
+locked=gesperrt
+instance=Satenbank-System
+emptySelectionMessage=Bitte wählen Sie einen Tabellen-Eintrag zur Bearbeitung
