--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -51,11 +51,11 @@ emailaddress.localpart=Parte local
 emailaddress.subdomain=Sub-dominio
 emailaddress.domain=Dominio
 emailaddress.target=Destino
-New=Nuevo
-Edit=Editar
-Delete=Eliminar
-Refresh=Refrescar
-Help=Ayuda
+new.tooltip=Nuevo
+edit.tooltip=Editar
+delete.tooltip=Eliminar
+refresh.tooltip=Refrescar
+help.tooltip=Ayuda
 new=Nuevo
 edit=Editar
 delete=Eliminar
@@ -64,6 +64,7 @@ help=Ayuda
 customer=Cliente
 contact=Contacto
 cancel=Cancelar
+ok=Ok
 mandat=Mandato electrónico
 password=Contraseña
 login=Iniciar sesión
