--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -1,6 +1,6 @@
 main.panel.title=Willkommen
 main.panel.text=in der Hostsharing Administration
-user=Anmelde-Name
+user=Login-Kennung
 domain=Domain
 emailaddress=EMail-Adresse
 pac=Web-Paket
@@ -12,9 +12,9 @@ postgresqldb=Postgresql Datenbank
 name=Name
 basepac=Paket-Typ
 hive=Server
-unixUser=Anmelde-Kennung
+unixUser=Login-Kennung
 curINetAddr=Netzwerk-Adresse (IPv4)
-user.name=Anmelde-Name
+user.name=Login-Name
 user.pac=Web-Paket
 user.comment=Kurzbeschreibung
 user.shell=Shell/Kommando-Interpreter
@@ -68,7 +68,8 @@ cancel=abbrechen
 ok=Ok
 mandat=SEPA-Mandat
 password=Passwort
-login=Anmelde-Name
+login.title=Anmeldung
+login.button=anmelden
 comment=Kurzbeschreibung
 shell=Shell/Kommando-Interpreter
 quotaSoftlimit=Quota (Soft-Limit)
