--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -67,7 +67,8 @@ cancel=Cancelar
 ok=Ok
 mandat=Mandato electrónico
 password=Contraseña
-login=Iniciar sesión
+login.title=Iniciar sesión
+login.button=Iniciar sesión
 comment=Comentario
 shell=Shell
 quotaSoftlimit=Quota soft limit
