initial toolbar, working logout button

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -70,6 +70,7 @@ mandat=SEPA-Mandat
 password=Passwort
 login.title=Anmeldung
 login.button=anmelden
+logout.tooltip=abmelden
 comment=Kurzbeschreibung
 shell=Shell/Kommando-Interpreter
 quotaSoftlimit=Quota (Soft-Limit)
