--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -69,6 +69,7 @@ mandat=Mandato electrónico
 password=Contraseña
 login.title=Iniciar sesión
 login.button=Iniciar sesión
+logout.tooltip=Finalizar Sesión
 comment=Comentario
 shell=Shell
 quotaSoftlimit=Quota soft limit
