property names in api are lowercase names

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -12,8 +12,8 @@ postgresqldb=Postgresql Datenbank
 name=Name
 basepac=Paket-Typ
 hive=Server
-unixUser=Login-Kennung
-curINetAddr=Netzwerk-Adresse (IPv4)
+unixuser=Login-Kennung
+curinetaddr=Netzwerk-Adresse (IPv4)
 user.name=Login-Name
 user.pac=Web-Paket
 user.comment=Kurzbeschreibung
