--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -10,8 +10,8 @@ postgresqldb=Base de datos Postgresql
 name=Nombre
 basepac=Paquete base
 hive=Hive
-unixUser=Usuario Unix
-curINetAddr=Dirección de red
+unixuser=Usuario Unix
+curinetaddr=Dirección de red
 user.name=Nombre de usuario
 user.pac=Paquete
 user.comment=Comentario
