quota property names have changed

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -20,8 +20,8 @@ user.comment=Kurzbeschreibung
 user.shell=Shell/Kommando-Interpreter
 user.homedir=Heimat-Verzeichnis
 user.locked=Gesperrt
-user.quotaSoftlimit=Quota (Soft-Limit)
-user.quotaHardlimit=Quota (Hard-Limit)
+user.quota_softlimit=Quota (Soft-Limit)
+user.quota_hardlimit=Quota (Hard-Limit)
 emailalias.name=EMail-Alias
 emailalias.pac=Web-Paket
 emailalias.target=Postfach/Weiterleitung
@@ -73,8 +73,8 @@ login.button=anmelden
 logout.tooltip=abmelden
 comment=Kurzbeschreibung
 shell=Shell/Kommando-Interpreter
-quotaSoftlimit=Quota (Soft-Limit)
-quotaHardlimit=Quota (Hard-Limit)
+quota_softlimit=Quota (Soft-Limit)
+quota_hardlimit=Quota (Hard-Limit)
 target=Postfach/Weiterleitung
 owner=Domain-Administrator
 encoding=Zeichen-Kodierung
