--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -18,8 +18,8 @@ user.comment=Comentario
 user.shell=Shell
 user.homedir=Inicio
 user.locked=Bloqueado
-user.quotaSoftlimit=Quota soft limit
-user.quotaHardlimit=Quota hard limit
+user.quota_softlimit=Quota soft limit
+user.quota_hardlimit=Quota hard limit
 emailalias.name=Nombre de alias
 emailalias.pac=Paquete
 emailalias.target=Destino
@@ -72,8 +72,8 @@ login.button=Iniciar sesión
 logout.tooltip=Finalizar Sesión
 comment=Comentario
 shell=Shell
-quotaSoftlimit=Quota soft limit
-quotaHardlimit=Quota hard limit
+quota_softlimit=Quota soft limit
+quota_hardlimit=Quota hard limit
 target=Destino
 owner=Propietario
 encoding=Codificación
