EMailTargetEditor work for now

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -52,7 +52,10 @@ domainoptions=Domain-Optionen
 emailaddress.localpart=lokaler Teil
 emailaddress.subdomain=Subdomain
 emailaddress.domain=Domain
-emailaddress.target=Postfach/Weiterleitung
+emailaddress.target=Ziel/Weiterleitung
+emailtarget.alias=Alias
+emailtarget.email=E-Mail
+emailtarget.postbox=Postfach
 new.tooltip=Neuen Eintrag anlegen
 edit.tooltip=Ausgewählten Eintrag bearbeiten
 delete.tooltip=Ausgewählten Eintrag löschen
