--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -51,6 +51,9 @@ emailaddress.localpart=Parte local
 emailaddress.subdomain=Sub-dominio
 emailaddress.domain=Dominio
 emailaddress.target=Destino
+emailtarget.alias=Alias
+emailtarget.email=EMail
+emailtarget.postbox=Postbox
 new.tooltip=Nuevo
 edit.tooltip=Editar
 delete.tooltip=Eliminar
