DomainOptionsEditor working, fixes on EMailTargetEditor

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -30,6 +30,12 @@ domain.user=Domain-Administrator
 domain.since=eingerichtet am
 domain.dnsMaster=DNS Server
 domain.domainoptions=Domain-Optionen
+domainoption.greylisting=Greylisting
+domainoption.multiviews=Multiviews
+domainoption.indexes=Indexes
+domainoption.htdocsfallback=htdocsfallback
+domainoption.includes=Includes
+domainoption.backupmxforexternalmx=Backupmx for external MX
 mysqluser.name=MySql User
 mysqluser.instance=Datenbank-System
 mysqluser.pac=Web-Paket
