--- a/src/main/resources/de/hsadmin/web/main_es.properties
+++ b/src/main/resources/de/hsadmin/web/main_es.properties
@@ -28,6 +28,12 @@ domain.user=Usuario de dominio
 domain.since=Dominio desde
 domain.dnsMaster=Maestro DNS
 domain.domainoptions=Opciones de dominio
+domainoption.greylisting=greylisting
+domainoption.multiviews=multiviews
+domainoption.indexes=indexes
+domainoption.htdocsfallback=htdocsfallback
+domainoption.includes=includes
+domainoption.backupmxforexternalmx=backupmxforexternalmx
 mysqluser.name=Nombre de usuario MySql
 mysqluser.instance=Instancia de MySql
 mysqluser.pac=Paquete de usuario MySql
