add missing text resources

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -14,7 +14,7 @@ basepac=Paket-Typ
 hive=Server
 unixuser=Login-Kennung
 curinetaddr=Netzwerk-Adresse (IPv4)
-user.name=Login-Name
+user.name=User/Postfach
 user.pac=Web-Paket
 user.comment=Kurzbeschreibung
 user.shell=Shell/Kommando-Interpreter
@@ -93,3 +93,71 @@ homedir=Heimat-Verzeichnis
 locked=gesperrt
 instance=Datenbank-System
 emptySelectionMessage=Bitte wählen Sie einen Tabellen-Eintrag zur Bearbeitung
+memberNo=Mitglieds-Nr.
+memberRole=Rolle / Aufgaben
+memberSince=Eintrittsdatum
+memberUntil=Austrittsdatum
+authorContract=Autorenvereinbarung
+nonDiscContract=Datenschutzvereinbarung
+sharesUpdated=Anteile (letzte Änd.)
+sharesSigned=Anteile
+free=frei
+exemptVAT=Umsatzsteuerbereiung
+indicatorVAT=Umsatzsteuer
+uidVAT=Unsatzsteuer-Id
+contact.customer=Mitglieds-Kennung
+contact.salut=Anrede
+contact.firstName=Vorname
+contact.lastName=Nachname
+contact.title=Titel
+contact.firma=Organisation
+contact.co=c/o
+contact.street=Straße
+contact.zipCode=PLZ
+contact.city=Ort
+contact.country=Land
+contact.phonePrivate=Tel. privat
+contact.phoneOffice=Tel. dienstl.
+contact.phoneMobile=Tel. mobil
+contact.fax=Fax
+contact.email=E-Mail
+contact.roles=Rollen
+salut=Anrede
+firstName=Vorname
+lastName=Nachname
+title=Titel
+firma=Organisation
+co=c/o
+street=Straße
+zipCode=PLZ
+city=Ort
+country=Land
+phonePrivate=Tel. privat
+phoneOffice=Tel. dienstl.
+phoneMobile=Tel. mobil
+fax=Fax
+email=E-Mail
+roles=Rollen
+mandat.customer=Mitglieds-Kennung
+mandat.bankCustomer=Konto-Inhaber
+mandat.bankName=Bank
+mandat.bankIBAN=IBAN
+mandat.bankBIC=BIC
+mandat.mandatRef=Mandatsreferenz
+mandat.mandatSigned=gezeichnet am
+mandat.mandatSince=gültig ab
+mandat.mandatUntil=gültig bis
+mandat.mandatUsed=genutzt am
+bankCustomer=Konto-Inhaber
+bankName=Bank
+bankIBAN=IBAN
+bankBIC=BIC
+mandatRef=Mandatsreferenz
+mandatSigned=gezeichnet am
+mandatSince=gültig ab
+mandatUntil=gültig bis
+mandatUsed=genutzt am
+pac.name=Paket-Name
+pac.basepac=Paket-Typ
+pac.hive=Server/Hive
+pac.curinetaddr=Netzwerk-Adresse (IPv4)
