--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -1,5 +1,6 @@
 main.panel.title=Willkommen
 main.panel.text=in der Hostsharing Administration
+main.panel.link_to_old=Schnell zum alten HSAdmin-UI
 user=Login-Kennung
 domain=Domain
 emailaddress=EMail-Adresse
@@ -102,9 +103,9 @@ nonDiscContract=Datenschutzvereinbarung
 sharesUpdated=Anteile (letzte Änd.)
 sharesSigned=Anteile
 free=frei
-exemptVAT=Umsatzsteuerbereiung
-indicatorVAT=Umsatzsteuer
-uidVAT=Unsatzsteuer-Id
+exemptVAT=Umsatzsteuerbefreit
+indicatorVAT=USt. Indikator
+uidVAT=Umsatzsteuer-ID
 contact.customer=Mitglieds-Kennung
 contact.salut=Anrede
 contact.firstName=Vorname
