replace string Login-Kennung

--- a/src/main/resources/de/hsadmin/web/main_de.properties
+++ b/src/main/resources/de/hsadmin/web/main_de.properties
@@ -1,7 +1,7 @@
 main.panel.title=Willkommen
 main.panel.text=in der Hostsharing Administration
 main.panel.link_to_old=Schnell zum alten HSAdmin-UI
-user=Login-Kennung
+user=User/Postfach
 domain=Domain
 emailaddress=EMail-Adresse
 pac=Web-Paket
@@ -13,7 +13,7 @@ postgresqldb=Postgresql Datenbank
 name=Name
 basepac=Paket-Typ
 hive=Server
-unixuser=Login-Kennung
+unixuser=User/Postfach
 curinetaddr=Netzwerk-Adresse (IPv4)
 user.name=User/Postfach
 user.pac=Web-Paket
